--- a/docs/environment.yaml
+++ b/docs/environment.yaml
@@ -12,5 +12,6 @@ dependencies:
 - sphinx
 - sphinx-click
 - sphinx-toolbox
+- myst-parser
 - pip:
   - git+https://github.com/OpenFreeEnergy/gufe@main
